tests/transpiler/x/rs/group_by_multi_join_sort.error
rustc: exit status 1
error: expected one of `>`, a const expression, lifetime, or type, found `,`
   --> /workspace/mochi/tests/transpiler/x/rs/group_by_multi_join_sort.rs:129:166
    |
129 | ...c::new(); let mut _groups: HashMap<String, Group<, CustomerItem>> = HashMap::new(); let mut _order: Vec<String> = Vec::new(); for c in...
    |                             -                       ^ expected one of `>`, a const expression, lifetime, or type
    |                             |
    |                             while parsing the type for the binding
    |                             help: use `=` if you meant to assign

error: expected one of `!`, `.`, `::`, `;`, `?`, `else`, `{`, or an operator, found `,`
   --> /workspace/mochi/tests/transpiler/x/rs/group_by_multi_join_sort.rs:129:158
    |
129 | ...m)> = Vec::new(); let mut _groups: HashMap<String, Group<, CustomerItem>> = HashMap::new(); let mut _order: Vec<String> = Vec::new(); ...
    |                                                     ^ expected one of 8 possible tokens

warning: unused import: `std::collections::HashMap`
 --> /workspace/mochi/tests/transpiler/x/rs/group_by_multi_join_sort.rs:2:5
  |
2 | use std::collections::HashMap;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error: aborting due to 2 previous errors; 1 warning emitted

